--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -7,14 +7,30 @@
   <packaging>pom</packaging>
 
   <name>Gosu :: Parent POM</name>
+  <description>Gosu is a pragmatic programming language for the JVM.</description>
+  <url>http://gosu-lang.github.io/</url>
 
   <licenses>
     <license>
-      <name>The Apache Software License, Version 2.0</name>
+    <name>The Apache License, Version 2.0</name>
       <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
     </license>
   </licenses>
+
+  <developers>
+    <developer>
+      <name>The Gosu Team</name>
+      <email>gosu.lang.team@gmail.com</email>
+      <organization>Guidewire</organization>
+      <organizationUrl>http://gosu-lang.github.io/</organizationUrl>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git@github.com:gosu-lang/gosu-lang.git</connection>
+    <developerConnection>scm:git:git@github.com:gosu-lang/gosu-lang.git</developerConnection>
+    <url>git@github.com:gosu-lang/gosu-lang.git</url>
+  </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
