--- a/gosu-custom-types-plugin/pom.xml
+++ b/gosu-custom-types-plugin/pom.xml
@@ -31,7 +31,11 @@
       <version>${gosu.version}</version>
       <scope>runtime</scope>
     </dependency>
-
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>12.0</version>
+    </dependency>
     <dependency>
       <groupId>com.jetbrains.intellij.platform</groupId>
       <artifactId>annotations</artifactId>
