fix the Gosu Custom Types Plugin to be compatible with the Gosu plugin for Ferrite

--- a/gosu-custom-types-plugin/META-INF/plugin.xml
+++ b/gosu-custom-types-plugin/META-INF/plugin.xml
@@ -11,7 +11,7 @@
 
   <project-components>
     <component>
-      <implementation-class>gw.plugin.ij.core.GosuProjectComponent</implementation-class>
+      <implementation-class>gw.plugin.ij.core.GosuCustomTypesProjectComponent</implementation-class>
     </component>
   </project-components>
 
