--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.gosu-lang.gosu</groupId>
+  <groupId>org.gosu-lang</groupId>
   <artifactId>gosu-doc</artifactId>
   <packaging>jar</packaging>
-  <version>0.X-SNAPSHOT</version>
+  <version>0.1</version>
   <name>gosu-doc</name>
   <description>Generates Java-doc compatible documentation for Gosu projects</description>
   <url>https://github.com/gosu-lang/gosu-doc</url>
