--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>gosu</module>
     <module>gosu-core</module>
     <module>gosu-core-api</module>
+    <module>gosu-core-api-precompiled</module>
     <module>gosu-parent</module>
     <module>gosu-test</module>
     <module>gosu-test-api</module>
