--- a/gosu-test/pom.xml
+++ b/gosu-test/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
-    <version>1-X-SNAPSHOT</version>
+    <version>1.8-SNAPSHOT</version>
     <relativePath>../gosu-parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -15,12 +15,12 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-test-api</artifactId>
-      <version>1-X-SNAPSHOT</version>
+      <version>1.8-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core</artifactId>
-      <version>1-X-SNAPSHOT</version>
+      <version>1.8-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
@@ -85,7 +85,7 @@
               <dependency>
                 <groupId>org.gosu-lang.gosu</groupId>
                 <artifactId>plexus-compiler-gosu</artifactId>
-                <version>1-X-SNAPSHOT</version>
+                <version>1.8-SNAPSHOT</version>
               </dependency>
             </dependencies>
           </plugin>
