--- a/gosu-core-api-precompiled/pom.xml
+++ b/gosu-core-api-precompiled/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
-    <version>1.8-SNAPSHOT</version>
+    <version>1.8</version>
     <relativePath>../gosu-parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -15,12 +15,12 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core-api</artifactId>
-      <version>1.8-SNAPSHOT</version>
+      <version>1.8</version>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core</artifactId>
-      <version>1.8-SNAPSHOT</version>
+      <version>1.8</version>
     </dependency>
   </dependencies>
 
@@ -37,7 +37,7 @@
           <dependency>
             <groupId>org.gosu-lang.gosu</groupId>
             <artifactId>plexus-compiler-gosu</artifactId>
-            <version>1.8-SNAPSHOT</version>
+            <version>1.8</version>
           </dependency>
         </dependencies>
       </plugin>
