--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -111,6 +111,11 @@
             </archive>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.18.1</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
