--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ machine:
 general:
   branches:
     only:
+      - ant
       - spec # only build/deploy from spec
   artifacts:
     - "gosu-test/target/site" # preserve the generated HTML test reports
