--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,14 @@
 
   <modules>
     <module>gosu</module>
+    <module>gosu-ant-compiler</module>
     <module>gosu-core</module>
     <module>gosu-core-api</module>
     <module>gosu-core-api-precompiled</module>
+    <module>gosu-maven-compiler</module>
     <module>gosu-parent</module>
     <module>gosu-test</module>
     <module>gosu-test-api</module>
-    <module>gosu-maven-compiler</module>
   </modules>
   <profiles>
     <profile>
