--- a/gosu-ant-compiler/pom.xml
+++ b/gosu-ant-compiler/pom.xml
@@ -27,7 +27,8 @@
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
-      <version>1.9.6</version>
+      <version>1.9.3</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
