--- a/gosu-ant-compiler/pom.xml
+++ b/gosu-ant-compiler/pom.xml
@@ -12,6 +12,10 @@
   <name>Gosu :: Compiler for Ant</name>
   <description>Gosu Compiler support for Ant</description>
 
+  <properties>
+    <ant.version>1.9.3</ant.version>
+  </properties>
+  
   <dependencies>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
@@ -26,8 +30,14 @@
     </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
+      <artifactId>ant-testutil</artifactId>
+      <version>${ant.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
-      <version>1.9.3</version>
+      <version>${ant.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
