--- a/ij-editor-devtools/pom.xml
+++ b/ij-editor-devtools/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
-    <version>1-X-SNAPSHOT</version>
+    <version>1.9</version>
     <relativePath>../gosu-parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>idea-gosu-plugin</artifactId>
-      <version>1-X-SNAPSHOT</version>
+      <version>1.9</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -64,7 +64,7 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core</artifactId>
-      <version>1-X-SNAPSHOT</version>
+      <version>1.9</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
