--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,22 @@
 
   <properties>
     <gosu.version>1-fixCmd-SNAPSHOT</gosu.version>
+    <!--<dist.man.snapshotrepo.url>https://oss.sonatype.org/content/repositories/snapshots</dist.man.snapshotrepo.url>-->
   </properties>
+
+  <!--<repositories>-->
+    <!--<repository>-->
+      <!--<id>ossrh</id>-->
+      <!--<name>Central Repository (snapshots)</name>-->
+      <!--<url>${dist.man.snapshotrepo.url}</url>-->
+      <!--<releases>-->
+        <!--<enabled>false</enabled>-->
+      <!--</releases>-->
+      <!--<snapshots>-->
+        <!--<enabled>true</enabled>-->
+      <!--</snapshots>-->
+    <!--</repository>-->
+  <!--</repositories>-->
 
   <dependencies>
     <dependency>
@@ -62,6 +77,12 @@
       <artifactId>jsoup</artifactId>
       <version>1.8.2</version>
       <scope>test</scope>
+    </dependency>
+    <!-- Preemptively get gosu-maven-compiler since the maven-compiler-plugin hard-codes its own obscure snapshot repo (plexus-snapshots) -->
+    <dependency>
+      <groupId>org.gosu-lang.gosu</groupId>
+      <artifactId>gosu-maven-compiler</artifactId>
+      <version>${gosu.version}</version>
     </dependency>
   </dependencies>
 
