--- a/idea-gosu-plugin/pom.xml
+++ b/idea-gosu-plugin/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
     <relativePath>../gosu-parent/pom.xml</relativePath>
-    <version>1-X-SNAPSHOT</version>
+    <version>1-ant-gosudoc-SNAPSHOT</version>
   </parent>
 
   <artifactId>idea-gosu-plugin</artifactId>
@@ -151,18 +151,18 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core</artifactId>
-      <version>1-X-SNAPSHOT</version>
+      <version>1-ant-gosudoc-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-test-api</artifactId>
-      <version>1-X-SNAPSHOT</version>
+      <version>1-ant-gosudoc-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>ij-compiler-api</artifactId>
-      <version>1-X-SNAPSHOT</version>
+      <version>1-ant-gosudoc-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
