--- a/gosu-ant-compiler/pom.xml
+++ b/gosu-ant-compiler/pom.xml
@@ -29,6 +29,12 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>org.gosu-lang</groupId>
+      <artifactId>gosu-doc</artifactId>
+      <version>0.3-linksee-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant-testutil</artifactId>
       <version>${ant.version}</version>
