--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -130,6 +130,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.18.1</version>
+          <configuration>
+            <reuseForks>false</reuseForks>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
