--- a/gosu-test/pom.xml
+++ b/gosu-test/pom.xml
@@ -91,8 +91,8 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.18.1</version>
             <configuration>
+              <reuseForks>false</reuseForks>
               <argLine>-Dgw.tests.skip.knownbreak=true -DcheckedArithmetic=true -Xmx1g</argLine>
               <includes>
                 <include>gw/config*/**/*Test.class</include>
