--- a/gosu-ant-compiler/pom.xml
+++ b/gosu-ant-compiler/pom.xml
@@ -48,4 +48,17 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <!-- tests in this module only will each receive a unique JVM -->
+          <reuseForks>false</reuseForks>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
