--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -18,18 +18,13 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-commons-cli</artifactId>
-      <version>1.2-1</version>
-    </dependency>
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-asm-util</artifactId>
+      <artifactId>gw-asm-all</artifactId>
       <version>5.0.4</version>
     </dependency>
   </dependencies>
