--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
   <modules>
     <module>gosu</module>
-    <module>gosu-ant-compiler</module>
+    <module>gosu-ant-tools</module>
     <module>gosu-core</module>
     <module>gosu-core-api</module>
     <module>gosu-core-api-precompiled</module>
