--- a/gosu-ant-tools/pom.xml
+++ b/gosu-ant-tools/pom.xml
@@ -29,9 +29,9 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>org.gosu-lang</groupId>
+      <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-doc</artifactId>
-      <version>0.3-linksee-SNAPSHOT</version>
+      <version>1-ant-gosudoc-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
