--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -131,26 +131,31 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.19</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>1.9.1</version>
+        </plugin>
       </plugins>
     </pluginManagement>
+    
     <plugins>
-    <plugin>
-      <groupId>org.codehaus.mojo</groupId>
-      <artifactId>build-helper-maven-plugin</artifactId>
-      <version>1.9.1</version>
-      <executions>
-        <execution>
-          <phase>generate-test-sources</phase>
-          <goals>
-            <goal>add-test-source</goal>
-          </goals>
-          <configuration>
-            <sources>
-              <source>src/test/gosu</source>
-            </sources>
-          </configuration>
-        </execution>
-      </executions>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>generate-test-sources</phase>
+            <goals>
+              <goal>add-test-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>src/test/gosu</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
     </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
