Fixing failed PLGosuBytecodeSuite tests

--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -147,9 +147,9 @@
         <artifactId>build-helper-maven-plugin</artifactId>
         <executions>
           <execution>
-            <phase>generate-test-sources</phase>
+            <phase>generate-sources</phase>
             <goals>
-              <goal>add-test-source</goal>
+              <goal>add-source</goal>
             </goals>
             <configuration>
               <sources>
