Relocating unconventional Java source root to gosu-test module   * Leaving this config in gosu-parent will apply it to all subprojects   * This interferes with gosu-doc, which is a properly structured module (by convention)   * *.java files in any src/test/gosu really ought to be moved to src/test/java in the same module; since javac runs before test execution, Gosu tests should see these Java classes without any issue

--- a/gosu-test/pom.xml
+++ b/gosu-test/pom.xml
@@ -24,6 +24,28 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>src/test/gosu</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+  
   <profiles>
     <profile>
       <id>runGosuTests</id>
