--- a/gosu-doc/pom.xml
+++ b/gosu-doc/pom.xml
@@ -56,6 +56,18 @@
   </dependencies>
 
   <build>
+    <!-- reset source/test roots to defaults, before adding src/main/gosu and src/test/gosu using build-helper-maven-plugin -->
+    <sourceDirectory>src/main/java</sourceDirectory>
+    <testSourceDirectory>src/test/gosu</testSourceDirectory>
+    <!-- the parent pom sets src/test/gosu as a resource root; if we don't undo this as below, all the tests will be copied to target/classes and packaged into the jar -->
+    <resources>
+      <resource>
+        <directory>src/test/gosu</directory>
+        <excludes>
+          <exclude>**/*</exclude>
+        </excludes>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -125,13 +137,6 @@
         <artifactId>maven-jar-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <includes>
-            <include>gw/gosudoc/GosuDoc.class</include>
-            <include>gw/gosudoc/doc/GSDocImplShim.class</include>
-            <include>**/*.gs</include>
-            <include>**/*.gsx</include>
-            <include>**/*.gst</include>
-          </includes>
           <archive>
             <manifest>
               <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
