--- a/gosu-core-api-precompiled/pom.xml
+++ b/gosu-core-api-precompiled/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
-    <version>1-X-SNAPSHOT</version>
+    <version>1-tooling-fixes-SNAPSHOT</version>
     <relativePath>../gosu-parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -16,12 +16,12 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core-api</artifactId>
-      <version>1-X-SNAPSHOT</version>
+      <version>1-tooling-fixes-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core</artifactId>
-      <version>1-X-SNAPSHOT</version>
+      <version>1-tooling-fixes-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
@@ -64,7 +64,7 @@
           <dependency>
             <groupId>org.gosu-lang.gosu</groupId>
             <artifactId>gosu-maven-compiler</artifactId>
-            <version>1-X-SNAPSHOT</version>
+            <version>1-tooling-fixes-SNAPSHOT</version>
           </dependency>
         </dependencies>
       </plugin>
