--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ machine:
 dependencies:
   override:
     # :go-offline will download as much as possible, saving time later.
-    - mvn dependency:go-offline
+    - mvn -B dependency:go-offline
 
 general:
   branches:
@@ -28,7 +28,7 @@ general:
 test:
   # Adds profile to pick up Gosu tests
   override:
-    - mvn integration-test -P runGosuTests deploy -s settings.xml
+    - mvn -B integration-test -P runGosuTests deploy -s settings.xml
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
