--- a/gosu/pom.xml
+++ b/gosu/pom.xml
@@ -29,6 +29,12 @@
       <version>${project.parent.version}</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.gosu-lang.gosu</groupId>
+      <artifactId>gosu-editor</artifactId>
+      <version>${project.parent.version}</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
   <build>
