CircleCI support request 859: try preserving build output into a file to prevent verbosity in the UI

--- a/circle.yml
+++ b/circle.yml
@@ -25,11 +25,12 @@ general:
       - tooling-fixes
   artifacts:
     - "gosu-test/target/site" # preserve the generated HTML test reports
+    - mvn_output.log
 
 test:
   # Adds profile to pick up Gosu tests
   override:
-    - mvn -B integration-test -P runGosuTests deploy -s settings.xml
+    - mvn -B integration-test -P runGosuTests deploy -s settings.xml | tee mvn_output.log
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
