--- a/gosu-editor/pom.xml
+++ b/gosu-editor/pom.xml
@@ -28,5 +28,23 @@
       <artifactId>junit</artifactId>
     </dependency>
   </dependencies>
-
+  <profiles>
+    <profile>
+      <id>internal.tools-jar</id>
+      <activation>
+        <file>
+          <exists>${java.home}/../lib/tools.jar</exists>
+        </file>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.sun</groupId>
+          <artifactId>tools</artifactId>
+          <version>1.8.0</version>
+          <scope>system</scope>
+          <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
