--- a/gosu-test/pom.xml
+++ b/gosu-test/pom.xml
@@ -30,40 +30,61 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Dgw.tests.skip.knownbreak=true -Xmx1g</argLine>
+          <argLine>-Dgw.tests.skip.knownbreak=true -DcheckedArithmetic=true -Xmx1g</argLine>
+          <includes>
+            <include>gw/config*/**/*Test.class</include>
+            <include>gw/internal*/**/*Test.class</include>
+            <include>gw/lang*/**/*Test.class</include>
+            <include>gw/spec*/**/*Test.class</include>
+            <include>gw/test*/**/*Test.class</include>
+            <include>gw/util*/**/*Test.class</include>
+            <include>gw/xml*/**/*Test.class</include>
+          </includes>
           <excludes>
             <exclude>gw/internal/gosu/parser/java/*</exclude>
             <exclude>gw/test/SuiteTest*</exclude>
             <exclude>**/*BenchmarkTest*</exclude>
+            <exclude>**/junit/framework/TestSuite*BenchmarkTest*</exclude>
           </excludes>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>add-test-source</id>
+            <phase>generate-test-sources</phase>
+            <goals>
+              <goal>add-test-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>src/test/gosu</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
   
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.19.1</version>
+      </plugin>
+    </plugins>
+  </reporting>
+  
   <profiles>
     <profile>
+      <!-- compiles src/test/gosu only if this profile is enabled -->
       <id>runGosuTests</id>
       <build>
         <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>build-helper-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>add-test-source</id>
-                <phase>generate-test-sources</phase>
-                <goals>
-                  <goal>add-test-source</goal>
-                </goals>
-                <configuration>
-                  <sources>
-                    <source>src/test/gosu</source>
-                  </sources>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
@@ -105,40 +126,8 @@
               </dependency>
             </dependencies>
           </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>-Dgw.tests.skip.knownbreak=true -DcheckedArithmetic=true -Xmx1g</argLine>
-              <includes>
-                <include>gw/config*/**/*Test.class</include>
-                <include>gw/internal*/**/*Test.class</include>
-                <include>gw/lang*/**/*Test.class</include>
-                <include>gw/spec*/**/*Test.class</include>
-                <include>gw/test*/**/*Test.class</include>
-                <include>gw/util*/**/*Test.class</include>
-                <include>gw/xml*/**/*Test.class</include>
-              </includes>
-              <excludes>
-                <exclude>gw/internal/gosu/parser/java/*</exclude>
-                <exclude>gw/test/SuiteTest*</exclude>
-                <exclude>**/*BenchmarkTest*</exclude>
-                <exclude>**/junit/framework/TestSuite*BenchmarkTest*</exclude>
-              </excludes>
-            </configuration>
-          </plugin>
         </plugins>
       </build>
-
-      <reporting>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-report-plugin</artifactId>
-            <version>2.19</version>
-          </plugin>
-        </plugins>
-      </reporting>
     </profile>
   </profiles>
 
