--- a/gosu-test-api/pom.xml
+++ b/gosu-test-api/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
-    <version>1.13.1-SNAPSHOT</version>
+    <version>1.13.1</version>
     <relativePath>../gosu-parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core-api</artifactId>
-      <version>1.13.1-SNAPSHOT</version>
+      <version>1.13.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
