--- a/gosu-test/pom.xml
+++ b/gosu-test/pom.xml
@@ -41,9 +41,17 @@
                 <arg>-DcheckedArithmetic=true</arg>
               </compilerArgs>
               <compilerId>gosuc</compilerId>
-              <fork>false</fork>
+              <fork>true</fork>
+              <compilerArgs>
+                <!--<arg>-Xdebug</arg>-->
+                <!-- windows -->
+                <!--<arg>-Xrunjdwp:transport=dt_shmem,address=gosuc,server=y,suspend=y</arg> -->
+                <!-- linux/OS X -->
+                <!--<arg>-Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=y</arg>-->
+              </compilerArgs>
+              <showWarnings>false</showWarnings>
               <useIncrementalCompilation>true</useIncrementalCompilation> <!-- this must be true or else we cannot pick up files with multiple extensions -->
-              <verbose>true</verbose>
+              <verbose>false</verbose>
               <testIncludes>
                 <include>**/*.gs</include>
                 <include>**/*.gsx</include>
