Use shaded version of jcommander

--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -28,8 +28,8 @@
       <version>5.0.4</version>
     </dependency>
     <dependency>
-      <groupId>com.beust</groupId>
-      <artifactId>jcommander</artifactId>
+      <groupId>org.gosu-lang.gosu.managed</groupId>
+      <artifactId>gw-jcommander</artifactId>
       <version>1.48</version>
     </dependency>
   </dependencies>
